fix- PopularBar 960px overFlow-x hidden

--- a/src/Components/LayoutCommon/LayoutCommon.module.scss
+++ b/src/Components/LayoutCommon/LayoutCommon.module.scss
@@ -1,6 +1,7 @@
 .layout-container {
   display: grid;
-  grid-template-columns: minmax(280px, 2.33fr) minmax(400px, 5.657fr) minmax(308px, 4.011fr);
+  // grid-template-columns: minmax(280px, 2.33fr) minmax(400px, 5.657fr) minmax(308px, 4.011fr);
+  grid-template-columns: minmax(228px, 2.33fr) minmax(438px, 5.657fr) minmax(293.47px, 4.011fr);
   grid-auto-rows: 100vh;
   margin: 0 auto;
  
