--- a/src/Components/ProfileUserNavBar/ProfileUserNavBar.module.scss
+++ b/src/Components/ProfileUserNavBar/ProfileUserNavBar.module.scss
@@ -7,9 +7,9 @@
   background-color: var(--color-white);
   opacity: 0.9;
   z-index: 2;
-  width: 649px;
+  width: 654px;
   @media screen and (max-width:1200px) {
-      width: 394px;
+      width: 432px;
     }
 }
 
