--- a/src/Pages/HomePage/HomePage.module.scss
+++ b/src/Pages/HomePage/HomePage.module.scss
@@ -12,7 +12,7 @@
 .page-title {
   position: fixed;
   top: 0;
-  width: 648.667px;
+  width: 654.667px;
   font-size: 24px;
   line-height: 26px;
   font-weight: 700;
